kubernetes/http-echo/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: http-echo-app
    name: http-echo
    namespace: http-echo-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: http-echo-app
    template:
        metadata:
            labels:
                app: http-echo-app
        spec:
            containers:
            -   name: http-echo
                image: hashicorp/http-echo
                imagePullPolicy: Always
                args:
                  - "-text= This is http-echo Server"
                resources:
                    requests:
                        memory: "256Mi"
                        cpu: "200m"
                    limits:
                        memory: "512Mi"
                        cpu: "512m"
                ports:
                - name: http
                  containerPort: 5678
                  protocol: TCP       
                livenessProbe:
                  httpGet:
                    path: /
                    port: http
                readinessProbe:
                  httpGet:
                    path: /
                    port: http
