kubernetes/http-echo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-echo-app
  name: http-echo-svc
  namespace: http-echo-ns
spec:
  type: NodePort
  selector:
    app: http-echo-app
  ports:
  - port: 5678
    protocol: TCP
    targetPort: 5678
