kubernetes/http-echo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_200"}}'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-1:XXXX:certificate/XXXX'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'  
  name: http-echo
  namespace: http-echo-ns
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: http-echo-svc
            port:
              number: 5678
        path: /
        pathType: Prefix
